--- a/content/resources/11-949s04-th.md
+++ b/content/resources/11-949s04-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-949-city-visions-past-and-future-spring-2004/d28f64d83dd0d9a3c0c4210a06514eb7_11-949s04-th.jpg
+file: /media/courses/11-949-city-visions-past-and-future-spring-2004/d28f64d83dd0d9a3c0c4210a06514eb7_11-949s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "A view of Paris at night. (Image courtesy Keith McCluskey, \xA9 opifice.com.)"
   credit: ''
   image-alt: A photo of the Paris Metro tracks heading off to a lit Eiffel Tower on
     the horizon.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 11-949s04-th.jpg
 uid: d28f64d8-3dd0-d9a3-c0c4-210a06514eb7
