--- a/content/resources/11-949s04-th.md
+++ b/content/resources/11-949s04-th.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A photo of the Paris Metro tracks heading off to a lit Eiffel Tower on
     the horizon.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-949s04-th.jpg
