--- a/content/resources/11-949s04-th.md
+++ b/content/resources/11-949s04-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/11-949-city-visions-past-and-future-spring-2004/d28f64d83dd0d9a3c0c4210a06514eb7_11-949s04-th.jpg
+file_size: 16575
 file_type: image/jpeg
 image_metadata:
   caption: "A view of Paris at night. (Image courtesy Keith McCluskey, \xA9 opifice.com.)"
